Initial commit with basic project files

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,16 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+.idea/
+bower_components/
+bower_components/*
+node_modules/
+node_modules/*
+dist/
+dist/*
+tmp/
+tmp/*
+localtest/
+localtest/*
+npm-debug.log
+.env
