Updated new repo url

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://nromeijn@bitbucket.org/Redslayer230/jarvis.git"
+    "url": "https://github.com/HANICA/project_jarvis.git"
   },
   "author": "",
   "license": "ISC",
