Proof of concept: UDP broadcast and receiver with SOK protocol message triggering

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/HANICA/project_jarvis.git"
+    "url": "https://nromeijn@bitbucket.org/Redslayer230/jarvis.git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "http-request": "^0.7.0"
   }
 }
