--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
-    "http-request": "^0.7.0"
+    "http-request": "^0.7.0",
+    "socket.io": "^1.3.7"
   }
 }
