--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "http-request": "^0.7.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "superagent": "^1.4.0"
   }
 }
