--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "Materialize": "materialize#~0.97.3",
     "angular": "~1.4.7",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "socket.io-client": "~1.3.7"
   }
 }
