--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^3.4.1",
     "express": "^4.13.3",
     "http-request": "^0.7.0",
     "socket.io": "^1.3.7",
-    "superagent": "^1.4.0"
+    "superagent": "^1.4.0",
+    "thinky": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
