--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-html2js": "^0.3.5"
+    "grunt-html2js": "^0.3.5",
+    "grunt-npm": "0.0.2",
+    "install": "^0.3.0"
   }
 }
