--- a/public/bower.json
+++ b/public/bower.json
@@ -21,6 +21,7 @@
     "Materialize": "materialize#~0.97.3",
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
-    "socket.io-client": "~1.3.7"
+    "socket.io-client": "~1.3.7",
+    "keyboard": "~1.25.9"
   }
 }
