--- a/public/bower.json
+++ b/public/bower.json
@@ -22,6 +22,8 @@
     "angular": "~1.4.7",
     "angular-ui-router": "~0.2.15",
     "socket.io-client": "~1.3.7",
-    "keyboard": "~1.25.9"
+    "keyboard": "~1.25.9",
+    "angularjs-slider": "~2.1.0",
+    "swiper": "~3.2.6"
   }
 }
