--- a/public/bower.json
+++ b/public/bower.json
@@ -24,6 +24,7 @@
     "socket.io-client": "~1.3.7",
     "keyboard": "~1.25.9",
     "angularjs-slider": "~2.1.0",
-    "swiper": "~3.2.6"
+    "swiper": "~3.2.6",
+    "jquery-timepicker-jt": "~1.8.8"
   }
 }
