--- a/public/bower.json
+++ b/public/bower.json
@@ -26,6 +26,7 @@
     "angularjs-slider": "~2.1.0",
     "swiper": "~3.2.6",
     "angular-chart.js": "~0.8.8",
-    "jquery-timepicker-jt": "~1.8.8"
+    "jquery-timepicker-jt": "~1.8.8",
+    "jquery-ui": "~1.11.4"
   }
 }
