--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "socket.io": "^1.3.7",
     "superagent": "^1.4.0",
     "supertest": "^1.1.0",
-    "thinky": "^2.2.0"
+    "thinky": "^2.2.0",
+    "webdriverio": "^3.4.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
