--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
     "express": "^4.13.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "should": "^7.1.1",
     "socket.io": "^1.3.7",
     "superagent": "^1.4.0",
